2012-12-16  Anders Carlsson  <andersca@apple.com>

        Implement authentication for downloads
        https://bugs.webkit.org/show_bug.cgi?id=105146
        <rdar://problem/12239483>

        Reviewed by Sam Weinig.

        * NetworkProcess/NetworkProcess.cpp:
        (WebKit::NetworkProcess::NetworkProcess):
        (WebKit::NetworkProcess::initialize):
        (WebKit::NetworkProcess::didReceiveMessage):
        (WebKit::NetworkProcess::didReceiveSyncMessage):
        (WebKit::NetworkProcess::downloadsAuthenticationManager):
        * NetworkProcess/NetworkProcess.h:
        * UIProcess/Downloads/DownloadProxy.cpp:
        (WebKit::DownloadProxy::didReceiveAuthenticationChallenge):
        * WebProcess/Downloads/Download.cpp:
        (WebKit::Download::didReceiveAuthenticationChallenge):
        * WebProcess/Downloads/DownloadManager.cpp:
        (WebKit::DownloadManager::downloadsAuthenticationManager):
        * WebProcess/Downloads/DownloadManager.h:
        * WebProcess/Downloads/mac/DownloadMac.mm:
        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::downloadsAuthenticationManager):
        (WebKit::WebProcess::didReceiveSyncMessage):
        * WebProcess/WebProcess.h:

2012-12-16  Huang Dongsung  <luxtella@company100.net>

        Coordinated Graphics: Small refactor of CoordinatedLayerTreeHost and CoordinatedGraphicsLayer.
        https://bugs.webkit.org/show_bug.cgi?id=104880

        Reviewed by Noam Rosenthal.

        Delete backing stores explicitly in ~CoordinatedLayerTreeHost().

        Clarify the lifecycle of backing stores in CoordinatedGraphicsLayer.
        Currently, CoordinatedGraphicsLayer::removeTile() checks if m_coordinator
        exists, because ~CoordinatedLayerTreeHost() sets m_coordinator in
        CoordinatedGraphicsLayer to 0. This patch purges backing stores before setting
        m_coordinator to 0. This change makes code more readable.
